@@ -12,6 +12,8 @@ git-annex (5.20150206) UNRELEASED; urgency=medium
     can actually use them, instead of by all commands.
   * import: Avoid checksumming file twice when run in the default
     or --duplicate mode.
+  * Windows: Fix bug in dropping an annexed file, which
+    caused a symlink to be staged that contained backslashes.
 
  -- Joey Hess <id@joeyh.name>  Fri, 06 Feb 2015 13:57:08 -0400
 
